Fixing the overflow toggle on moblie part 2

--- a/src/index.css
+++ b/src/index.css
@@ -20,6 +20,7 @@ html {
   font-size: 1rem;
   overflow-x: hidden;
   height: 100vh;
+  max-width: 100%;
 }
 .page::-webkit-scrollbar {
   width: 0.5em;
